Correction of the final version v1

--- a/style/contact.scss
+++ b/style/contact.scss
@@ -1,13 +1,13 @@
 #contact_box {
     position: relative;
     background-color: #04cfe2;
-    height: 40vh;
+    height: 255px;
     width: 75vw;
-    transform: translate(7vw, 4vh);
+    transform: translate(7vw, 25px);
     border-radius: 5px;
     display: flex;
     align-items: center;
-    margin-bottom: 20vh;
+    margin-bottom: 140px;
     z-index: 1;
 }
 
