--- a/style/footer.scss
+++ b/style/footer.scss
@@ -25,7 +25,7 @@ footer {
 
 #footer-row2 {
     list-style-type: none;
-    height: 5vh;
+    height: 20px;
     display: flex;
     flex-basis: 100%;
     flex-direction: column;
@@ -34,7 +34,7 @@ footer {
 
 #footer-row3 {
     list-style-type: none;
-    height: 5vh;
+    height: 20px;
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
