--- a/style/basket.scss
+++ b/style/basket.scss
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     padding-left: 2vw;
-    padding-top: 2vh;
+    padding-top: 15px;
     background-color: white;
-    height: 40vh;
+    height: 250px;
     width: 75vw;
-    margin-bottom: 20vh;
+    margin-bottom: 200px;
     margin-left: 2vw;
 }
