--- a/style/settings.scss
+++ b/style/settings.scss
@@ -32,7 +32,7 @@ body {
     position: relative;
     background-color: #1a1a1a;
     color: white;
-    height: 78vh;
+    height: 500px;
     width: 20vw;
     transform: translate(1vw, 590px);
     opacity: 0.8;
@@ -46,8 +46,8 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 8vh;
-        height: 78vh;
+        gap: 50px;
+        height: 500px;
     }
 
     ul li a {
@@ -69,6 +69,7 @@ body {
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-bottom: 85px;
 }
 
 img {
