--- a/style/style.css
+++ b/style/style.css
@@ -78,7 +78,7 @@ body {
   position: relative;
   background-color: #1a1a1a;
   color: white;
-  height: 78vh;
+  height: 500px;
   width: 20vw;
   transform: translate(1vw, 590px);
   opacity: 0.8;
@@ -92,8 +92,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 8vh;
-  height: 78vh;
+  gap: 50px;
+  height: 500px;
 }
 #burger_box ul li a {
   text-decoration: none;
@@ -113,6 +113,7 @@ body {
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin-bottom: 85px;
 }
 
 img {
@@ -199,7 +200,7 @@ p {
 
 #section1_about {
   display: flex;
-  margin-bottom: 20vh;
+  margin-bottom: 200px;
 }
 
 .col1 {
@@ -248,7 +249,7 @@ footer {
 
 #footer-row2 {
   list-style-type: none;
-  height: 5vh;
+  height: 20px;
   display: flex;
   flex-basis: 100%;
   flex-direction: column;
@@ -257,7 +258,7 @@ footer {
 
 #footer-row3 {
   list-style-type: none;
-  height: 5vh;
+  height: 20px;
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
@@ -272,13 +273,13 @@ footer {
 #contact_box {
   position: relative;
   background-color: #04cfe2;
-  height: 40vh;
+  height: 255px;
   width: 75vw;
-  transform: translate(7vw, 4vh);
+  transform: translate(7vw, 25px);
   border-radius: 5px;
   display: flex;
   align-items: center;
-  margin-bottom: 20vh;
+  margin-bottom: 140px;
   z-index: 1;
 }
 
@@ -297,25 +298,25 @@ footer {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  padding-top: 4vh;
-  padding-bottom: 21.8vh;
+  padding-top: 15px;
+  padding-bottom: 140px;
 }
 #inscription_form button {
-  margin-top: 2vh;
+  margin-top: 12px;
   border-radius: 10px;
   background-color: #00d0e5;
   color: white;
   border: none;
-  padding: 1vh;
+  padding: 6px;
   cursor: pointer;
   margin-left: 4vw;
 }
 #inscription_form .inputs {
-  margin-bottom: 2vh;
+  margin-bottom: 12px;
 }
 #inscription_form .gender {
-  margin-top: 2vh;
-  margin-bottom: 2vh;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 #inscription_form .gender label {
   margin-left: 2vw;
@@ -331,11 +332,11 @@ footer {
   display: flex;
   flex-direction: column;
   padding-left: 2vw;
-  padding-top: 2vh;
+  padding-top: 15px;
   background-color: white;
-  height: 40vh;
+  height: 250px;
   width: 75vw;
-  margin-bottom: 20vh;
+  margin-bottom: 200px;
   margin-left: 2vw;
 }
 
