Nearly finish with the dynamic display of my products from the json file

--- a/style/settings.scss
+++ b/style/settings.scss
@@ -64,13 +64,55 @@ body {
     cursor: pointer;
 }
 
-.row {
+.rowAllProducts {
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
     margin-bottom: 85px;
 }
+
+.rowIndex {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 85px;
+}
+
+.rowIndex2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 85px;
+}
+
+.rowIndexIntro {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 85px;
+}
+
+.rowIndexBestProducts {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 85px;
+}
+
+.rowIndexLastProducts {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 85px;
+}
+
+
 
 img {
     border-radius: 15px;
@@ -88,7 +130,7 @@ p {
 
 /* Index and products style */
 
-.col-4 {
+.productPageProducts {
     flex-basis: 25%;
     min-width: 200px;
     padding: 15px;
@@ -103,8 +145,49 @@ p {
     }
 }
 
-.rating .fa {
-    color: #16a7b4;
+.productIndexBestProducts {
+    flex-basis: 25%;
+    min-width: 200px;
+    padding: 15px;
+    transition: transform 0.4s;
+
+    img {
+        width: 100%;
+    }
+
+    :hover {
+        transform: translateY(-10px);
+    }
+}
+
+.productIndexLastProducts {
+    flex-basis: 25%;
+    min-width: 200px;
+    padding: 15px;
+    transition: transform 0.4s;
+
+    img {
+        width: 100%;
+    }
+
+    :hover {
+        transform: translateY(-10px);
+    }
+}
+
+.productIndex {
+    flex-basis: 25%;
+    min-width: 200px;
+    padding: 15px;
+    transition: transform 0.4s;
+
+    img {
+        width: 100%;
+    }
+
+    :hover {
+        transform: translateY(-10px);
+    }
 }
 
 /* Index and about style */
