Pop-up nearly ok soon reflexion about perfect all the design implement

--- a/style/navbar.scss
+++ b/style/navbar.scss
@@ -42,3 +42,12 @@ nav ul li a {
 #basket {
     cursor: pointer;
 }
+
+
+@media screen and (max-width: 780px) {
+
+    .navbar {
+        margin-top: 150px;
+    }
+
+}
