--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,11 @@ nav ul li a {
   cursor: pointer;
 }
 
+@media screen and (max-width: 780px) {
+  .navbar {
+    margin-top: 150px;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -70,7 +75,7 @@ body {
 }
 
 .header-section {
-  margin-top: -20px;
+  margin-top: 151px;
   background: radial-gradient(#fff, #eaf2fb);
 }
 
@@ -223,6 +228,40 @@ p {
   transform: translateY(-10px);
 }
 
+.popup {
+  height: 572px;
+  width: 50vw;
+  background-color: #1a1a1a;
+  z-index: 2000;
+  transform: translate(0px, 195px);
+  text-align: justify;
+  padding-left: 20px;
+  padding-right: 40px;
+  padding-top: 0px;
+  transform: translate(300px, 747px);
+  margin-top: -723px;
+  opacity: 0.95;
+}
+.popup h3 {
+  color: white;
+  padding-bottom: 25px;
+  padding-top: 12px;
+}
+.popup .contentPopup p {
+  color: white;
+  font-size: 14px;
+}
+.popup button {
+  width: 45vw;
+  height: 40px;
+  margin-top: 7px;
+  border-radius: 5px;
+  border: none;
+  margin-left: 3px;
+  font-size: medium;
+  cursor: pointer;
+}
+
 /* Index and about style */
 #unnamed {
   width: 100%;
@@ -231,6 +270,44 @@ p {
   margin-left: 5vw;
 }
 
+/* End of index and about style */
+@media screen and (max-width: 780px) {
+  .header-section {
+    margin-top: -572px;
+    background: radial-gradient(#fff, #eaf2fb);
+  }
+  .popup {
+    height: 572px;
+    width: 100vw;
+    background-color: #1a1a1a;
+    z-index: 2000;
+    transform: translate(0px, 195px);
+    text-align: justify;
+    padding-left: 20px;
+    padding-right: 40px;
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+  .popup h3 {
+    color: white;
+    padding-bottom: 25px;
+    padding-top: 12px;
+  }
+  .popup .contentPopup p {
+    color: white;
+    font-size: 14px;
+  }
+  .popup button {
+    width: 90vw;
+    height: 40px;
+    margin-top: 7px;
+    border-radius: 5px;
+    border: none;
+    margin-left: 3px;
+    font-size: medium;
+    cursor: pointer;
+  }
+}
 .col-2 {
   flex-basis: 50%;
   min-width: 200px;
