--- a/style/settings.scss
+++ b/style/settings.scss
@@ -24,7 +24,6 @@ body {
 }
 
 .header-section {
-    margin-top: 151px;
     background: radial-gradient(#fff, #eaf2fb);
 }
 
@@ -193,7 +192,7 @@ p {
 
 .popup {
     height: 572px;
-    width: 50vw;
+    width: 700px;
     background-color: #1a1a1a;
     z-index: 2000;
     transform: translate(0px, 195px);
@@ -201,9 +200,10 @@ p {
     padding-left: 20px;
     padding-right: 40px;
     padding-top: 0px;
-    transform: translate(300px, 747px);
+    transform: translate(25vw, 747px);
     margin-top: -723px;
     opacity: 0.95;
+    position: fixed;
 
     h3 {
         color: white;
@@ -217,7 +217,7 @@ p {
     }
 
     button {
-        width: 45vw;
+        width: 650px;
         height: 40px;
         margin-top: 7px;
         border-radius: 5px;
@@ -226,6 +226,7 @@ p {
         font-size: medium;
         cursor: pointer;
     }
+
 }
 
 
@@ -243,7 +244,6 @@ p {
 @media screen and (max-width: 780px) {
 
     .header-section {
-        margin-top: -572px;
         background: radial-gradient(#fff, #eaf2fb);
     }
 
@@ -252,7 +252,7 @@ p {
         width: 100vw;
         background-color: #1a1a1a;
         z-index: 2000;
-        transform: translate(0px, 195px);
+        transform: translate(5%, 24px);
         text-align: justify;
         padding-left: 20px;
         padding-right: 40px;
@@ -262,7 +262,7 @@ p {
         h3 {
             color: white;
             padding-bottom: 25px;
-            padding-top: 12px;
+            padding-top: 45px;
         }
 
         .contentPopup p {
