--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px;
+  margin-top: 151px;
 }
 
 .logo img {
@@ -75,7 +76,6 @@ body {
 }
 
 .header-section {
-  margin-top: 151px;
   background: radial-gradient(#fff, #eaf2fb);
 }
 
@@ -230,7 +230,7 @@ p {
 
 .popup {
   height: 572px;
-  width: 50vw;
+  width: 700px;
   background-color: #1a1a1a;
   z-index: 2000;
   transform: translate(0px, 195px);
@@ -238,9 +238,10 @@ p {
   padding-left: 20px;
   padding-right: 40px;
   padding-top: 0px;
-  transform: translate(300px, 747px);
+  transform: translate(25vw, 747px);
   margin-top: -723px;
   opacity: 0.95;
+  position: fixed;
 }
 .popup h3 {
   color: white;
@@ -252,7 +253,7 @@ p {
   font-size: 14px;
 }
 .popup button {
-  width: 45vw;
+  width: 650px;
   height: 40px;
   margin-top: 7px;
   border-radius: 5px;
@@ -273,7 +274,6 @@ p {
 /* End of index and about style */
 @media screen and (max-width: 780px) {
   .header-section {
-    margin-top: -572px;
     background: radial-gradient(#fff, #eaf2fb);
   }
   .popup {
@@ -281,7 +281,7 @@ p {
     width: 100vw;
     background-color: #1a1a1a;
     z-index: 2000;
-    transform: translate(0px, 195px);
+    transform: translate(5%, 24px);
     text-align: justify;
     padding-left: 20px;
     padding-right: 40px;
@@ -291,7 +291,7 @@ p {
   .popup h3 {
     color: white;
     padding-bottom: 25px;
-    padding-top: 12px;
+    padding-top: 45px;
   }
   .popup .contentPopup p {
     color: white;
