--- a/views/_lastProducts.pug
+++ b/views/_lastProducts.pug
@@ -2,7 +2,8 @@ section.featured-products
     div.container
         h2 Our last products
         div.rowIndexLastProducts
-            div.productIndexLastProducts
-                img.image_product(id='product1' src='#' alt='')
-                h3.nameProduct
-                p.price
+            each product in lastProducts
+                div.productIndexLastProducts
+                    img.image_product(id='product1' src=`${product.image}` alt=`${product.name}`)
+                    h3.nameProduct= product.name
+                    p.price= product.price
