--- a/views/_burgerBox.pug
+++ b/views/_burgerBox.pug
@@ -1,7 +1,7 @@
 div(id='burger_box')
     ul
         li
-            a(href='index.html') Home
+            a(href='/') Home
         li
             a(href='products.html') Products
         li 
