--- a/views/_header.pug
+++ b/views/_header.pug
@@ -13,7 +13,7 @@ section(id='header-section')
                         button(id='make_search' type='submit')
                             i.fa fa-search
                 nav
-                    a(href='basket.html')
+                    a(href='/basket')
                         img(id='basket' src='images/cart.png' alt='Cart icon' width='26px')
         div.rowIndexIntro
             div.col-2
