--- a/views/base.pug
+++ b/views/base.pug
@@ -1,4 +1,4 @@
-DOCTYPE html
+doctype html
 html(lang='en')
 
 include _head
@@ -7,10 +7,12 @@ body(style='margin-top: -150px;')
     include _cookiePopUp
     include _burgerBox
     include _header
-    include _featuredCategories
-    include _bestProducts
-    include _lastProducts
+    block content
+        include _featuredCategories
+        include _bestProducts
+        include _lastProducts
 
 
     include _footer
-    script(type='module' src='javascript/index.js')
+    block script
+        script(type='module' src='javascript/index.js')
